<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.geolykt</groupId>
    <artifactId>galimirc</artifactId>
    <version>1.0.0</version>
    <name>GalimulatorIRC</name>
    <description>A simple IRC Client for galimulator</description>
    <inceptionYear>2021</inceptionYear>

    <repositories>
        <repository>
            <id>stianloader</id>
            <url>https://stianloader.org/maven/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- https://stianloader.org/maven/de/geolykt/starloader-api/ -->
        <dependency>
            <groupId>de.geolykt</groupId>
            <artifactId>starloader-api</artifactId>
            <version>2.0.0-a20240523</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://stianloader.org/maven/org/stianloader/launcher-micromixin/ -->
        <dependency>
            <groupId>org.stianloader</groupId>
            <artifactId>launcher-micromixin</artifactId>
            <version>4.0.0-a20240512</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.kitteh.irc/client-lib -->
        <dependency>
            <groupId>org.kitteh.irc</groupId>
            <artifactId>client-lib</artifactId>
            <version>8.0.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <pluginRepositories>
        <pluginRepository>
            <id>apache-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>.</directory>
                <includes>
                    <include>LICENSE</include>
                    <include>LICENSE.md</include>
                </includes>
                <targetPath>META-INF/LICENSES/${project.artifactId}</targetPath>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <target>1.8</target>
                    <source>1.8</source>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>net.engio.mbassy</pattern>
                            <shadedPattern>de.geolykt.galimirc.depend.net.engio.mbassy</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.netty</pattern>
                            <shadedPattern>de.geolykt.galimirc.depend.io.netty</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.kitteh.irc</pattern>
                            <shadedPattern>de.geolykt.galimirc.depend.org.kitteh.irc</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
